# cs2-dumper

./: CMakeLists.txt  README.md  main.cpp
src/: include.hpp  logger.hpp
src/schema/: schema.cpp  schema.hpp
